In mobile, deployable menu taking all screen. Minor format fixes regarding sizes in letters and elements. heroImage made bigger. Experience image flipped upside. Footer section link elements formatted.

--- a/src/Components/About/About.module.css
+++ b/src/Components/About/About.module.css
@@ -74,6 +74,10 @@
     margin-right: 20px;
 }
 
+.aboutItemText p {
+    font-size: 18px;
+}
+
 @media screen and (max-width: 1000px) {
     .container {
         background-color: transparent;
