--- a/src/Components/Hero/Hero.module.css
+++ b/src/Components/Hero/Hero.module.css
@@ -25,13 +25,12 @@
     font-weight: 900;
     margin-bottom: 33px;
     font-family: var(--font-roboto);
-    background: linear-gradient(
-        90deg, 
-        rgba(255, 255, 255, 1) 70%, 
-        rgba(255, 255, 255, 0) 120%
-    );
-    -webkit-text-fill-color: transparent;
-    -webkit-background-clip: text;
+    text-align: center;
+}
+
+.span {
+    color: var(--color-blue); 
+    font-family: var(--font-roboto);
 }
 
 .description {
@@ -127,8 +126,8 @@
     }
 
     .heroImg {
-        width: 60%;
-        margin-bottom: -1rem;
+        width: 75%;
+        margin-bottom: -3rem;
     }
 }
 
