--- a/src/Components/Contact/Contact.module.css
+++ b/src/Components/Contact/Contact.module.css
@@ -17,6 +17,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    margin-bottom: 2rem;
 }
 
 .text h2 {
@@ -26,9 +27,17 @@
 }
 
 .text p {
-    font-size: 40px;
+    font-size: 35px;
     font-weight: 400;
     letter-spacing: 2px;
+    margin-bottom: 1rem;
+    text-align: center;
+}
+
+.text span {
+    font-style: italic;
+    font-family: var(--font-roboto);
+    font-size: 28px;
 }
 
 .links {
@@ -42,7 +51,7 @@
 .link {
     display: flex;
     align-items: center;
-    gap: 25px;
+    gap: 15px;
     transition: 0.4s ease;
 }
 
@@ -72,8 +81,12 @@
         font-size: 20px;
     }
 
-    .link img {
+    .link a img {
         width: 35px;
+    }
+
+    .text span {
+        font-size: 20px;
     }
 }
 
@@ -88,8 +101,41 @@
         flex-direction: column;
         align-items: center;
     }
+    
+    .text h2 {
+        font-size: 40px;
+        margin-bottom: 0.5rem;
+    }
+    
+    .text p {
+        font-size: 20px;
+        text-align: center;
+        margin-bottom: 0.75rem;
+    }
+
+    .text span {
+        font-size: 17px;
+    }
 
     .links {
         align-items: center;
+        flex-direction: row;
+        justify-content: center;
+        gap: 40px;
+        flex-wrap: wrap;
+    }
+
+    .link {
+        flex-direction: column;
+        gap: 5px;
+    }
+
+    .link:hover {
+        cursor: pointer;
+        transform: translate(0, -20px);
+    }
+
+    .link a {
+        font-size: 15px;
     }
 }
