--- a/src/Components/Experience/Experience.module.css
+++ b/src/Components/Experience/Experience.module.css
@@ -17,6 +17,7 @@
     letter-spacing: 1.75px;
     text-transform: uppercase;
     margin-bottom: 3rem;
+    text-align: center;
 }
 
 .content {
@@ -80,11 +81,12 @@
     display: flex;
     flex-direction: row;
     align-items: center;
-    gap: 17px;
+    gap: 47px;
     background: #19376d;
     background: linear-gradient(90deg, #19376d 0%, rgba(25, 55, 109, 0) 100%);
     border-radius: 10px;
     padding: 24px;
+    margin-bottom: 1rem;
 }
 
 .historyItem img {
@@ -125,10 +127,35 @@
         width: 100%;
         flex-direction: row;
         justify-content: center;
+        margin-bottom: 2rem;
+        gap: 20px;
     }
 
     .history {
         width: 100%;
         gap: 9px;
+    }
+    
+    .skillImageContainer {
+        width: 80px;
+        height: 80px;
+    }
+    
+    .skillImageContainer img {
+        width: 50px;
+    }
+    
+    .skill p {
+        font-size: 17px;
+    }
+
+    .historyItem {
+        flex-direction: column;
+        margin-bottom: 1rem;
+    }
+
+    .historyItem img {
+        flex-direction: column;
+        margin-bottom: -1rem;
     }
 }
