--- a/src/Components/Projects/ProjectCard.module.css
+++ b/src/Components/Projects/ProjectCard.module.css
@@ -82,3 +82,31 @@
 .link:hover {
     background-color: var(--color-blue);
 }
+
+@media screen and (max-width: 500px) {
+    .container {
+        width: 80%;
+    }
+
+    .image {
+        width: 100%;
+        margin-bottom: 10px;
+    }
+
+    .title {
+        font-size: 23px;
+    }
+    
+    .description {
+        font-size: 15px;
+    }
+    
+    .skill {
+        font-size: 15px;
+        padding: 2px 10px;
+    }
+    
+    .link {
+        font-size: 20px;
+    }
+}
