--- a/src/Components/Experience/Experience.module.css
+++ b/src/Components/Experience/Experience.module.css
@@ -101,11 +101,13 @@
     font-size: 20px;
     font-weight: 500;
     margin-bottom: 5px;
+    text-shadow: var(--text-shadow)
 }
 
 .historyItemDetails p {
     font-size: 12px;
     font-weight: 300;
+    font-style: italic;
 }
 
 .historyItemDetails ul {
@@ -114,6 +116,7 @@
     font-size: 16px;
     list-style-type: disc;
     margin-left: 17px;
+    color: var(--color-paragraphs)
 }
 
 @media screen and (max-width: 830px) {
@@ -128,7 +131,7 @@
         flex-direction: row;
         justify-content: center;
         margin-bottom: 2rem;
-        gap: 20px;
+        gap: 30px;
     }
 
     .history {
