--- a/src/Components/Navbar/Navbar.module.css
+++ b/src/Components/Navbar/Navbar.module.css
@@ -69,18 +69,13 @@
 }
 
 @media screen and (max-width: 830px) {
-    .navbar {
-        flex-direction: column;
-        align-items: flex-start;
-    }
-
+    /* Navbar styles were unnecessary. Eliminated */
     .menu {
         position: absolute;
         top: 0;
         right: 0;
         flex-direction: column;
-        align-items: flex-end;
-        gap: 11px;
+        align-items: center;
         z-index: 3;
         /* Eliminated margin-right. Added top: 0. */
     }
@@ -88,15 +83,23 @@
     .menuBtn {
         display: flex;
         cursor: pointer;
-        z-index: 2;
+        z-index: 100;
         position: absolute;
         top: 67px;
         right: 3rem;
+        transition: opacity 0.4s ease;
+        transition: 0.4s ease;
         /* Added position absolute and parameters to the button */
     }
 
+    .menuBtn:hover {
+        background-color: rgba(255, 255, 255, 0.25);
+        border-radius: 20px;
+    }
+
     .menuItems {
-        display: none;
+        /* The "menuOpen" class was eliminated, not necessary. Passing every property from there to here solved the fading issue */
+        display: flex;
         flex-direction: column;
         align-items: center;
         gap: 20px;
@@ -104,23 +107,22 @@
         background: linear-gradient(0deg, rgba(25, 55, 109, 0.98) 0%, rgba(25, 55, 109, 0.98) 100%);
         padding: 24px 33px;
         box-shadow: 0 0 4px 0 rgba(0, 0, 0, 0.25);
-    }
-
-    .menuOpen {
-        display: flex;
-        z-index: 1;
-        position: absolute;
-        right: -16.3px;
-        top: 0;
+        position: fixed;
         min-width: 100vw;
         min-height: 100vh;
-        /* Viewport width and height to occupy all the screen. Position absolute to be just like the .menu. */
-        /* I had to use right: -15px because for some reason there was a space that I could not take away */
+        transition: opacity 0.4s ease-in-out;
+        /* Viewport width and height to occupy all the screen. Position absolute to be just like the .menu */
+    }
+
+    .menuItemsShow {
+        opacity: 1;
+    }
+
+    .menuItemsHidden {
+        opacity: 0;
     }
 
     .menuItems a {
         font-size: 30px;
     }
-
 }
-
