--- a/src/Components/Projects/ProjectCard.module.css
+++ b/src/Components/Projects/ProjectCard.module.css
@@ -19,11 +19,13 @@
 
 .image {
     margin-bottom: 26px;
+    border-radius: 20px;
 }
 
 .title {
     font-size: 25px;
     font-weight: 700;
+    text-shadow: var(--text-shadow)
 }
 
 .span {
@@ -40,6 +42,7 @@
     margin-top: 6px;
     font-size: 20px;
     font-weight: 400;
+    color: var(--color-paragraphs)
 }
 
 .skills {
