Hero description modified by suggestions. Skills updated acoording to my desired stack. Added Star Wars project in Projects section.

--- a/src/Components/Projects/ProjectCard.module.css
+++ b/src/Components/Projects/ProjectCard.module.css
@@ -7,10 +7,11 @@
     background: linear-gradient(180deg, #576cbc 0%, #132a53 100%);
     box-shadow: 0 16px 14px 0 #04152d;
     padding: 18px 24px;
-    max-width: 345px;
+    max-width: 320px;
     align-items: center;
     margin: 0.5rem;
     transition: 0.3s ease-out;
+    height: 550px;
 }
 
 .container:hover {
@@ -20,6 +21,7 @@
 .image {
     margin-bottom: 26px;
     border-radius: 20px;
+    width: 100%;
 }
 
 .title {
@@ -89,6 +91,7 @@
 @media screen and (max-width: 500px) {
     .container {
         width: 80%;
+        height: auto;
     }
 
     .image {
